# svgc

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.txt  README.md  README.ru.md
.github/: PULL_REQUEST_TEMPLATE.md
i18n/: translations.toml
src/: default_opt.rs  files.rs  i18n.rs  main.rs  svgo.rs  svgz.rs
