[package]
name = "svgc"
version = "0.1.1"
authors = ["Petr Alexandrovich Sabanov pasabanov@murena.io"]
edition = "2021"
description = "`svgc` (previously SvgCompress) is a tool for compressing SVG files by removing unnecessary whitespace, comments, metadata and some other data. It also supports optimization with [SVGO](https://github.com/svg/svgo) and compression into [SVGZ](https://ru.wikipedia.org/wiki/SVG#SVGZ). The tool helps reduce the file size and clean up SVG files for better performance and preparing for release versions."
repository = "https://github.com/pasabanov/svgc"
license = "GPL-3.0-or-later"

[dependencies]
clap = "4.5.16"
flate2 = "1.0.31"
lazy_static = "1.5.0"
regex = "1.10.6"
which = "6.0.3"

[profile.dev]
# Compilation
codegen-units = 256
incremental = true
# Behavior
overflow-checks = true
panic = "unwind"
# Optimization
opt-level = 0
lto = false
# Symbols
debug = true
strip = "none"

[profile.fastcompile]
inherits = "dev"
# Compilation
codegen-units = 8192
incremental = true
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = 0
lto = false
# Symbols
debug = false
strip = "none"

[profile.release]
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = 3
lto = true
# Symbols
debug = false
strip = "symbols"

[profile.relwithdebinfo]
inherits = "release"
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "unwind"
# Optimization
opt-level = 2
lto = true
# Symbols
debug = true
strip = "none"

[profile.minsize]
inherits = "release"
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = "z"
lto = true
# Symbols
debug = false
strip = "symbols"