[package]
name = "svgc"
version = "0.1.8"
authors = ["Petr Alexandrovich Sabanov pasabanov@murena.io"]
edition = "2021"
description = "`svgc` (previously SvgCompress) is a tool for compressing SVG files by removing unnecessary whitespace, comments, metadata and some other data. It also supports optimization with SVGO and compression into SVGZ."
repository = "https://github.com/pasabanov/svgc"
license = "AGPL-3.0-or-later"

[package.metadata.i18n]
available-locales = ["en", "ru"]
default-locale = "en"
load-path = "i18n"

exclude = [
	"/.github/",
	"/.gitlab/",
	"/.idea/",
	"/.vscode/",
	"/doc/",
	"/docs/",
	"/example/",
	"/examples/",
	"/test/",
	"/tests/",
	"/.editorconfig",
	"/.gitignore",
	"/.rustfmt.toml",
	"/rustfmt.toml"
]

[dependencies]
chrono = "0.4.38"
clap = "4.5.16"
directories = "5.0.1"
dirs = "5.0.1"
flate2 = "1.0.31"
language-tags = "0.3.2"
lazy_static = "1.5.0"
regex = "1.10.6"
rust-i18n = "3.1.2"
sys-locale = "0.3.1"
which = "6.0.3"

[profile.dev]
# Compilation
codegen-units = 256
incremental = true
# Behavior
overflow-checks = true
panic = "unwind"
# Optimization
opt-level = 0
lto = false
# Symbols
debug = true
strip = "none"

[profile.fastcompile]
inherits = "dev"
# Compilation
codegen-units = 8192
incremental = true
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = 0
lto = false
# Symbols
debug = false
strip = "none"

[profile.release]
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = 3
lto = true
# Symbols
debug = false
strip = "symbols"

[profile.relwithdebinfo]
inherits = "release"
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "unwind"
# Optimization
opt-level = 2
lto = true
# Symbols
debug = true
strip = "none"

[profile.minsize]
inherits = "release"
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = "z"
lto = true
# Symbols
debug = false
strip = "symbols"